# ejemplo_setuptools_tox

./: .coveragerc  README.rst  setup.cfg  setup.py
docs/: conf.py  index.rst
src/ejemplo_setuptools_tox/: fib.py  fib_model.py  skeleton.py
tests/: conftest.py  test_fib.py  test_skeleton.py
