[metadata]
name = ejemplo_setuptools_tox
description = Add a short description here!
author = Franco Leonardo Bulgarelli
author_email = franco@mumuki.org
license = MIT
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/pyscaffold/pyscaffold/
project_urls =
    Documentation = https://pyscaffold.org/

platforms = any

classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

python_requires = >=3.8

install_requires =
    importlib-metadata; python_version<"3.8"
    pandas
    scipy

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    setuptools
    pytest
    pytest-cov

[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = ejemplo_setuptools_tox.module:function
# For example:
console_scripts =
    fib = ejemplo_setuptools_tox.fib:run

[tool:pytest]
addopts =
    --cov ejemplo_setuptools_tox --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[bdist_wheel]
universal = 1

[devpi:upload]
no_vcs = 1
formats = bdist_wheel

[flake8]
max_line_length = 88
extend_ignore = E203, W503
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
version = 4.0.2
package = ejemplo_setuptools_tox
extensions =
